--- a/login.html
+++ b/login.html
@@ -1,138 +1,91 @@
 <!DOCTYPE HTML>
 <!--
-	Future Imperfect by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+  Future Imperfect by HTML5 UP
+  html5up.net  | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Future Imperfect by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<head>
+  <title>Future Imperfect – Log In</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+  <!-- Wrapper -->
+  <div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Future Imperfect</a></h1>
-						<nav class="links">
-							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
-							</ul>
-						</nav>
-						<nav class="main">
-							<ul>
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="서치" />
-									</form>
-								</li>
-								<li class="menu">
-									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
-							</ul>
-						</nav>
-					</header>
+    <!-- Header -->
+    <header id="header">
+      <h1><a href="index.html">Future Imperfect</a></h1>
+      <nav class="links">
+        <ul>
+          <!-- 모바일에서는 상단 네비게이션 숨겨도 무방합니다 -->
+        </ul>
+      </nav>
+      <nav class="main">
+        <ul>
+          <li class="search">
+            <a class="fa-search" href="#search">Search</a>
+            <form id="search" method="get" action="#">
+              <input type="text" name="query" placeholder="Search" />
+            </form>
+          </li>
+          <li class="menu">
+            <a class="fa-bars" href="#menu">Menu</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-				<!-- Menu -->
-					<section id="menu">
+    <!-- Menu (필요하다면 햄버거 누르면 나오는 메뉴) -->
+    <section id="menu">
+      <section>
+        <form class="search" method="get" action="#">
+          <input type="text" name="query" placeholder="Search" />
+        </form>
+      </section>
+      <section>
+        <ul class="links">
+          <li><a href="login.html"><h3>Log In</h3><p>로그인 페이지</p></a></li>
+          <li><a href="signup.html"><h3>Sign Up</h3><p>회원가입 페이지</p></a></li>
+        </ul>
+      </section>
+    </section>
 
-						<!-- Search -->
-							<section>
-								<form class="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</section>
+    <!-- Main -->
+    <div id="main">
+      <!-- ▼ 여기에 로그인 폼 (모바일 전용) ▼ -->
+      <section class="form-wrapper login-form-wrapper">
+        <form id="loginForm" method="post" action="/login">
+          <div class="form-field">
+            <label for="username">ID</label>
+            <input type="text" id="username" name="username" placeholder="Enter ID" required />
+          </div>
+          <div class="form-field">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter Password" required />
+          </div>
+          <div class="form-field">
+            <button type="submit">Log In</button>
+          </div>
+        </form>
+      </section>
+      <!-- 로그인 폼 끝 -->
+    </div>
 
-						<!-- Links -->
-							<section>
-								<ul class="links">
-									<li>
-										<a href="#">
-											<h3>Log in</h3>
-											<p>Feugiat tempus veroeros dolor</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>sing up</h3>
-											<p>Sed vitae justo condimentum</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>edit account info</h3>
-											<p>Phasellus sed ultricies mi congue</p>
-										</a>
-									</li>
-								</ul>
-							</section>
+    <!-- Sidebar (모바일에서 숨김 처리했으므로 실제로는 나타나지 않음) -->
+    <section id="sidebar"></section>
 
-						<!-- Actions -->
-							<section>
-								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
-								</ul>
-							</section>
+  </div>
 
-					</section>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
 
-				<!-- Main -->
-					<div id="main">
-							<!-- Login Form 추가 -->
-							<section class="login-form-wrapper">
-								<form id="loginForm" method="post" action="/login">
-									<div class="form-field">
-										<label for="username">ID</label>
-										<input type="text" id="username" name="username" placeholder="Enter ID" required />
-									</div>
-									<div class="form-field">
-										<label for="password">Password</label>
-										<input type="password" id="password" name="password" placeholder="Enter Password" required />
-									</div>
-									<div class="form-field">
-										<button type="submit">Log In</button>
-									</div>
-								</form>
-							</section>
-
-					</div>
-
-				<!-- Sidebar -->
-					<section id="sidebar">
-
-
-						<!-- Footer -->
-							<section id="footer">
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
-									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
-							</section>
-
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+</body>
 </html>
