--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <ul class="posts" id="postsList">
         <!-- JS로 채워집니다 -->
       </ul>
+      <!-- 기사 5개 아래에 추가된 버튼 -->
+      <ul class="actions">
+        <li><a href="#" class="button">더 보기</a></li>
+      </ul>
     </section>
 
     <!-- About -->
@@ -148,7 +152,6 @@
                 </time>
               </header>
               <a href="single.html?id=${issue.id}" class="image">
-                <!-- 기본 이미지를 noimage.jpg로 설정하고, 에러 시에도 fallback -->
                 <img
                   class="rotator"
                   src="images/noimage.jpg"
