--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                  "issue_id" : issue_id
+                  "issue_id" : issue.id
                 }),
                 credentials: 'include'
               });
