--- a/single.html
+++ b/single.html
@@ -83,7 +83,7 @@
     <!-- About -->
     <section class="blurb">
       <h2>About</h2>
-      <p>사실 이 프로젝트 제목은 준혁이의 허락을 받지 않고 어쩌고 저쩌고~</p>
+      <p>사실 이 프로젝트 제목은 준혁이의 허락을 받지 않고 어쩌고 저쩌고~~~</p>
       <ul class="actions">
         <li><a href="#" class="button">Learn More</a></li>
       </ul>
