--- a/single.html
+++ b/single.html
@@ -69,16 +69,7 @@
       </footer>
     </article>
 
-    <!-- About -->
-    <section class="blurb">
-      <h2>About</h2>
-      <p>사실 이 프로젝트 제목은 준혁이의 허락을 받지 않고 어쩌고 저쩌고~</p>
-      <ul class="actions">
-        <li><a href="#" class="button">Learn More</a></li>
-      </ul>
-    </section>
-
-    <!-- ▼ 연관 기사 영역: About 바로 아래 ▼ -->
+    <!-- ▼ 연관 기사 영역: About 제거 후 바로 표시 ▼ -->
     <section id="related-news">
       <h2>연관 기사</h2>
       <ul id="related-list">
