--- a/editorpage.html
+++ b/editorpage.html
@@ -6,11 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <style>
+    /* 메뉴바 (index.html에서 가져옴) */
+    header#header nav.links ul,
+    header#header nav.main ul {
+      display: flex;
+      gap: 1rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    header#header nav.links a,
+    header#header nav.main a {
+      text-decoration: none;
+      color: inherit;
+    }
+
     /* 개발자 프로필 레이아웃 */
     .dev-item {
       display: flex;
       align-items: center;
-      margin-bottom: 2rem;
+      margin: 3rem 0; /* 상하 간격을 더 넓힘 */
     }
     .dev-item .image {
       flex: 0 0 150px;
@@ -26,12 +41,13 @@
     }
     .dev-item .details h3 {
       margin: 0 0 0.5rem;
-      font-size: 1.25rem;
+      font-size: 1.5rem;
     }
     .dev-item .details p {
       margin: 0;
       color: #555;
       line-height: 1.6;
+      font-size: 1.1rem;
     }
   </style>
 </head>
@@ -39,10 +55,23 @@
 
   <div id="wrapper">
 
-    <!-- Header -->
+    <!-- Header & 메뉴 -->
     <header id="header">
       <h1><a href="index.html">준혁이는 뉴스 보기 귀찮아!</a></h1>
-      <!-- 생략된 내비게이션 -->
+      <nav class="links">
+        <ul>
+          <li><a href="#">Lorem</a></li>
+          <li><a href="#">Ipsum</a></li>
+          <li><a href="#">Feugiat</a></li>
+          <li><a href="#">Tempus</a></li>
+          <li><a href="#">Adipiscing</a></li>
+        </ul>
+      </nav>
+      <nav class="main">
+        <ul>
+          <li class="menu"><a class="fa-bars" href="#menu">Menu</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- 개발자 프로필 리스트 -->
@@ -71,7 +100,7 @@
 
     <!-- Footer -->
     <section id="footer">
-      <!-- 생략된 풋터 -->
+      <p>&copy; 준혁이는 뉴스 보기 귀찮아!</p>
     </section>
 
   </div>
